<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:background="@drawable/main_back">

    <RelativeLayout
        android:id="@+id/ll_sd_totalSize"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_sd_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="@string/Total_capacity" />

        <TextView
            android:id="@+id/tv_sd_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_sd_all"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:src="@mipmap/set_long_line" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/ll_sd_Residue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ll_sd_totalSize">

        <TextView
            android:id="@+id/tv_sd_Residue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="@string/Available_space" />

        <TextView
            android:id="@+id/tv_sd_Residue_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_sd_Residue"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:src="@mipmap/set_long_line" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_sd_picture"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ll_sd_Residue">

        <TextView
            android:id="@+id/tv_sd_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="@string/Picture_using_capacity" />

        <TextView
            android:id="@+id/tv_sd_picture_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_sd_picture"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:src="@mipmap/set_long_line" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_sd_video"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ll_sd_picture">

        <TextView
            android:id="@+id/tv_sd_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="@string/video_using_capacity" />

        <TextView
            android:id="@+id/tv_sd_video_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_sd_video"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:src="@mipmap/set_long_line" />

    </RelativeLayout>


    <include layout="@layout/layout_control_bottom" />

</RelativeLayout>
